force-app/main/default/objects/Matter__c/fields/Need_for_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Need_for_Conversion__c</fullName>
    <label>Need for Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>