force-app/main/default/objects/Matter__c/fields/New_or_Old_Matter__c.field-meta.xml
<CustomField>
    <fullName>New_or_Old_Matter__c</fullName>
    <label>New or Old Matter?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>