force-app/main/default/objects/Matter__c/fields/Note_Status__c.field-meta.xml
<CustomField>
    <fullName>Note_Status__c</fullName>
    <formula>IF(
    ISBLANK(Latest_Note_Created_Date__c),
    &quot;❌ MATTER PROGRESS NOTES NOT UPDATED&quot;,
    IF(
        TODAY() - Latest_Note_Created_Date__c &gt; 14,
        &quot;❌ MATTER PROGRESS NOTES NOT UPDATED&quot;,
        &quot;✅ MATTER PROGRESS NOTES UPDATED&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Status</label>
    <type>Text</type>
</CustomField>