force-app/main/default/objects/Matter__c/fields/Number_of_Days_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Months__c</fullName>
    <label>Number of Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>