force-app/main/default/objects/Matter__c/fields/Number_of_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoices__c</fullName>
    <label>Number of Unpaid Invoices</label>
    <summaryFilterItems>
        <field>Invoice__c.Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Paid, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Matter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>