force-app/main/default/objects/Matter__c/fields/Other_Additional_Processes__c.field-meta.xml
<CustomField>
    <fullName>Other_Additional_Processes__c</fullName>
    <label>Other Additional Processes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>