force-app/main/default/objects/Matter__c/fields/Other_Client_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Other_Client_Instructions__c</fullName>
    <label>Other Client Instructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>