force-app/main/default/objects/Matter__c/fields/Other_Legal_Analysis_Verification__c.field-meta.xml
<CustomField>
    <fullName>Other_Legal_Analysis_Verification__c</fullName>
    <label>Legal Analysis/Verification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>