force-app/main/default/objects/Matter__c/fields/Other_Property_Condition__c.field-meta.xml
<CustomField>
    <fullName>Other_Property_Condition__c</fullName>
    <label>Other Property Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>