force-app/main/default/objects/Matter__c/fields/Other_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Transaction_Type__c</fullName>
    <label>Other Transaction Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>