force-app/main/default/objects/Matter__c/fields/Our_Ref_2__c.field-meta.xml
<CustomField>
    <fullName>Our_Ref_2__c</fullName>
    <description>File number + Job Number</description>
    <formula>IF(
AND(
NOT(ISBLANK(Parent_Name__c)),
OR(
ISPICKVAL(Practice_Area__c, &quot;Real Estate Development (Property File)&quot;),
ISPICKVAL(Practice_Area__c, &quot;Intellectual Property (Property file)&quot;),
ISPICKVAL(Practice_Area__c, &quot;Litigation (Property File)&quot;)
)
),
File_No__c &amp; &quot;/ &quot; &amp;
IF(
ISPICKVAL(Department__c, &quot;Secretarial&quot;),
Hisa_Job_No__c,
Job_No__c
) &amp;
&quot;-&quot; &amp; (Unit_Description__c),
File_No__c &amp; &quot;/ &quot; &amp;
IF(
ISPICKVAL(Department__c, &quot;Secretarial&quot;),
Hisa_Job_No__c,
Job_No__c
)
)</formula>
    <label>Our Ref</label>
    <type>Text</type>
</CustomField>