force-app/main/default/objects/Matter__c/fields/Our_Ref__c.field-meta.xml
<CustomField>
    <fullName>Our_Ref__c</fullName>
    <description>Our reference from Wakili CMS</description>
    <externalId>true</externalId>
    <inlineHelpText>Our reference from Wakili CMS</inlineHelpText>
    <label>Our Ref Wakili CMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>