force-app/main/default/objects/Matter__c/fields/Paid_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoices__c</fullName>
    <label>Paid Invoices</label>
    <summarizedField>Invoice__c.Invoiced_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>