force-app/main/default/objects/Matter__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Matter Name</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Sub Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>