force-app/main/default/objects/Matter__c/fields/Particulars_Rendered__c.field-meta.xml
<CustomField>
    <fullName>Particulars_Rendered__c</fullName>
    <description>Writeup for legal services rendered to appear on the invoice</description>
    <inlineHelpText>Writeup for legal services rendered to appear on the invoice</inlineHelpText>
    <label>Particulars Rendered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>