force-app/main/default/objects/Matter__c/fields/Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address__c</fullName>
    <description>Adverse Party Physical Address</description>
    <label>Adverse Party Physical Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>