force-app/main/default/objects/Matter__c/fields/Physical_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Physical_File_Number__c</fullName>
    <label>Physical File Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>