force-app/main/default/objects/Matter__c/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <description>Adverse Party Postal Address</description>
    <label>Adverse Party Postal Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>