force-app/main/default/objects/Matter__c/fields/Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Practice_Area__c</fullName>
    <label>Practice Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate Development (Property File)</fullName>
            </value>
            <value>
                <fullName>Intellectual Property (Property file)</fullName>
            </value>
            <value>
                <fullName>Litigation (Property File)</fullName>
            </value>
            <value>
                <fullName>General File</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Financing</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Immigration Law</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Hisa Property File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>