force-app/main/default/objects/Matter__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>Low (over a year)</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium (within a year)</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>High (within 6 months)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>