force-app/main/default/objects/Matter__c/fields/Priority_Initial__c.field-meta.xml
<CustomField>
    <fullName>Priority_Initial__c</fullName>
    <formula>(CASE(TEXT( Priority__c ),
&quot;High&quot;,&quot;X&quot;,
&quot;Medium&quot;,&quot;Y&quot;,
&quot;Z&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Initial</label>
    <type>Text</type>
</CustomField>