force-app/main/default/objects/Matter__c/fields/Proforma_Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proforma Invoice Generated</label>
    <type>Checkbox</type>
</CustomField>