force-app/main/default/objects/Matter__c/fields/Property_Condition__c.field-meta.xml
<CustomField>
    <fullName>Property_Condition__c</fullName>
    <label>Property Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Residential House</fullName>
            </value>
            <value>
                <fullName>Shops and offices</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Developed</fullName>
                <isActive>false</isActive>
                <label>Developed</label>
            </value>
            <value>
                <fullName>Undeveloped/Empty</fullName>
                <isActive>false</isActive>
                <label>Undeveloped/Empty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>