force-app/main/default/objects/Matter__c/fields/Purchaser_Client__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchaser Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matters (Purchaser Client)</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>