force-app/main/default/objects/Matter__c/fields/Purchaser_Contact__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchaser Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>