force-app/main/default/objects/Matter__c/fields/Purchaser_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_s_Email__c</fullName>
    <label>Purchaser’s Email</label>
    <type>Email</type>
</CustomField>