force-app/main/default/objects/Matter__c/fields/Purchaser_s_KRA_PIN__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_s_KRA_PIN__c</fullName>
    <label>Purchaser’s KRA PIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>