force-app/main/default/objects/Matter__c/fields/Purchaser_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_s_Name__c</fullName>
    <label>Purchaser’s Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>