force-app/main/default/objects/Matter__c/fields/Purchaser_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_s_Phone_Number__c</fullName>
    <label>Purchaser’s Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>