force-app/main/default/objects/Matter__c/fields/Quotation_Generated__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quotation Generated</label>
    <type>Checkbox</type>
</CustomField>