force-app/main/default/objects/Matter__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <description>Reason for rejecting acceptance of instructions</description>
    <label>Reason for Rejection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>