force-app/main/default/objects/Matter__c/fields/Seller_Client__c.field-meta.xml
<CustomField>
    <fullName>Seller_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matters (Seller Client)</relationshipLabel>
    <relationshipName>Matters2</relationshipName>
    <type>Lookup</type>
</CustomField>