force-app/main/default/objects/Matter__c/fields/Seller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Seller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matters (Seller Contact)</relationshipLabel>
    <relationshipName>Matters1</relationshipName>
    <type>Lookup</type>
</CustomField>