force-app/main/default/objects/Matter__c/fields/Seller_Details_From__c.field-meta.xml
<CustomField>
    <fullName>Seller_Details_From__c</fullName>
    <label>Seller Details From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>