force-app/main/default/objects/Matter__c/fields/Seller_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Seller_s_Email__c</fullName>
    <label>Seller’s Email</label>
    <type>Email</type>
</CustomField>