force-app/main/default/objects/Matter__c/fields/Seller_s_KRA_PIN__c.field-meta.xml
<CustomField>
    <fullName>Seller_s_KRA_PIN__c</fullName>
    <label>Seller’s KRA PIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>