force-app/main/default/objects/Matter__c/fields/Seller_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_s_Name__c</fullName>
    <label>Seller’s Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>