force-app/main/default/objects/Matter__c/fields/Seller_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Seller_s_Phone_Number__c</fullName>
    <label>Seller’s Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>