force-app/main/default/objects/Matter__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceptance of Instructions</fullName>
                <default>true</default>
                <label>Acceptance of Instructions</label>
            </value>
            <value>
                <fullName>Proforma Invoice</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
            <value>
                <fullName>Stuck</fullName>
            </value>
            <value>
                <fullName>Held In Abeyance</fullName>
            </value>
            <value>
                <fullName>Quotation/Lead</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>File Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>