force-app/main/default/objects/Matter__c/fields/Stamp_Duty_Payable_Ksh__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Payable_Ksh__c</fullName>
    <label>Stamp Duty Payable (Ksh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>