force-app/main/default/objects/Matter__c/fields/Status_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Reporting_Date__c</fullName>
    <defaultValue>Today()+14</defaultValue>
    <label>Next Reporting Date</label>
    <type>Date</type>
</CustomField>