force-app/main/default/objects/Matter__c/fields/Sub_Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Balance__c</fullName>
    <formula>Amount__c -  Total_Legal_Fees_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>