force-app/main/default/objects/Matter__c/fields/Sum_of_Petty_Cash__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Petty_Cash__c</fullName>
    <label>Sum of Petty Cash</label>
    <summarizedField>Disbursement__c.Amount__c</summarizedField>
    <summaryForeignKey>Disbursement__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>