force-app/main/default/objects/Matter__c/fields/Template_Applied__c.field-meta.xml
<CustomField>
    <fullName>Template_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Applied</label>
    <type>Checkbox</type>
</CustomField>