force-app/main/default/objects/Matter__c/fields/Tentative_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Date__c</fullName>
    <label>Tentative Date</label>
    <type>Date</type>
</CustomField>