force-app/main/default/objects/Matter__c/fields/Total_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursements__c</fullName>
    <label>Total Disbursements (KES)</label>
    <summarizedField>Matter_Item__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Matter_Item__c.Line_Type__c</field>
        <operation>equals</operation>
        <value>Disbursement</value>
    </summaryFilterItems>
    <summaryForeignKey>Matter_Item__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>