force-app/main/default/objects/Matter__c/fields/Total_Legal_Fees_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Legal_Fees_Amount__c</fullName>
    <label>Total Legal Fees Amount</label>
    <summarizedField>Invoice__c.Invoiced_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Type__c</field>
        <operation>equals</operation>
        <value>Legal Fees</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>