force-app/main/default/objects/Matter__c/fields/Total_VAT_of_Invoices_created__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT_of_Invoices_created__c</fullName>
    <label>Total VAT of Invoices created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>