force-app/main/default/objects/Matter__c/fields/TotalAmountofUnpaidInvoices__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofUnpaidInvoices__c</fullName>
    <label>TotalAmountofUnpaidInvoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>