force-app/main/default/objects/Matter__c/fields/Transaction_type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale (acting for seller)</fullName>
            </value>
            <value>
                <fullName>Purchase (acting for Purchaser)</fullName>
            </value>
            <value>
                <fullName>Both Sale and Purchase</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Lease</fullName>
                <isActive>false</isActive>
                <label>Lease</label>
            </value>
            <value>
                <fullName>Purchase of Land</fullName>
                <isActive>false</isActive>
                <label>Purchase of Land</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>