force-app/main/default/objects/Matter__c/fields/Type_Client_Initial__c.field-meta.xml
<CustomField>
    <fullName>Type_Client_Initial__c</fullName>
    <formula>(CASE(TEXT( Type_of_Client__c ),
&quot;Limited Company&quot;,&quot;L&quot;,
&quot;Partnership and Sole Proprietorship&quot;,&quot;P&quot;,
						&quot;G&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Client Initial</label>
    <type>Text</type>
</CustomField>