force-app/main/default/objects/Matter__c/fields/Type_of_Client__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Client__c</fullName>
    <label>Type of Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Company</fullName>
            </value>
            <value>
                <fullName>Partnership and Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Individual directors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>