force-app/main/default/objects/Matter__c/fields/Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Description__c</fullName>
    <label>Unit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>