force-app/main/default/objects/Matter__c/fields/UnpaidInvoice_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>UnpaidInvoice_Disbursements__c</fullName>
    <formula>TotalAmountofUnpaidInvoices__c +  Disbursement_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnpaidInvoice+Disbursements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>