force-app/main/default/objects/Matter__c/fields/VAT_16__c.field-meta.xml
<CustomField>
    <fullName>VAT_16__c</fullName>
    <formula>IF(TEXT(Exempted__c) = &quot;NO&quot;, 0.16 *  Amount__c , 0)</formula>
    <label>VAT 16%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>