force-app/main/default/objects/Matter__c/fields/VAT_16_T__c.field-meta.xml
<CustomField>
    <fullName>VAT_16_T__c</fullName>
    <formula>IF(
    VAT_16__c &gt;= 1000000000,
    TEXT(FLOOR(VAT_16__c / 1000000000)) &amp; &quot;,&quot; &amp; 
    RIGHT(TEXT(FLOOR((VAT_16__c / 1000000) - (FLOOR(VAT_16__c / 1000000000) * 1000))), 3) &amp; &quot;,&quot; &amp; 
    RIGHT(TEXT(FLOOR(VAT_16__c / 1000)), 3) &amp; &quot;,&quot; &amp; 
    RIGHT(TEXT(FLOOR(VAT_16__c)), 3),
    IF(
        VAT_16__c &gt;= 1000000,
        TEXT(FLOOR(VAT_16__c / 1000000)) &amp; &quot;,&quot; &amp; RIGHT(TEXT(FLOOR(VAT_16__c / 1000)), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(FLOOR(VAT_16__c)), 3),
        IF(
            VAT_16__c &gt;= 1000,
            TEXT(FLOOR(VAT_16__c / 1000)) &amp; &quot;,&quot; &amp; RIGHT(TEXT(FLOOR(VAT_16__c)), 3),
            TEXT(FLOOR(VAT_16__c))
        )
    )
)
&amp; &quot;.&quot; &amp; LPAD(TEXT((Amount__c - FLOOR(VAT_16__c)) * 100), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT 16 T</label>
    <type>Text</type>
</CustomField>