force-app/main/default/objects/Matter__c/fields/Wakili_CMS_Upload__c.field-meta.xml
<CustomField>
    <fullName>Wakili_CMS_Upload__c</fullName>
    <label>Wakili CMS Upload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>