force-app/main/default/objects/Matter__c/fields/What_is_the_type_of_representation__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_type_of_representation__c</fullName>
    <label>What is the type of representation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual Representation</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>