force-app/main/default/objects/Matter__c/validationRules/Job_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Number_Rule</fullName>
    <active>true</active>
    <description>Job Number need to be filled for Old Matters</description>
    <errorConditionFormula>AND(
    ISPICKVAL(New_or_Old_Matter__c, &quot;Old&quot;),
    ISBLANK(Job_No__c)
)</errorConditionFormula>
    <errorDisplayField>Job_No__c</errorDisplayField>
    <errorMessage>Please fill in the Job Number field</errorMessage>
</ValidationRule>