force-app/main/default/objects/Matter__c/validationRules/Physical_File_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Physical_File_Number_Rule</fullName>
    <active>true</active>
    <description>Physical file number needs to be filled for Old Matters</description>
    <errorConditionFormula>AND(
    ISPICKVAL(New_or_Old_Matter__c, &quot;Old&quot;),
    ISBLANK(Physical_File_Number__c)
)</errorConditionFormula>
    <errorDisplayField>Physical_File_Number__c</errorDisplayField>
    <errorMessage>Please fill in the Physical File Number</errorMessage>
</ValidationRule>